--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 /*CSS Doc*/
 
+
+/*UNIVERSAL CLASSES*/
+
 .hidden
 {
 	display: none;
@@ -10,8 +13,40 @@
 {
 	width: 1400px;
 	height: 25px;
-	background: #999;
+	background: #485725;
 }
+
+.title
+{
+	width: 1050px;
+	margin-left: 175px;
+	font-family: Arial;
+	font-size: 36px;
+}
+
+.title h1, h2
+{
+	font-size: 36px;
+	font-weight: bold;
+	padding: 10px;
+}
+
+.subtitle
+{
+	width: 1050px;
+	margin-left: 175px;
+	font-family: Arial;
+}
+
+.subtitle h3
+{
+	text-align: center;
+	font-size: 24px;
+	font-weight: bold;
+	padding: 10px;
+}
+
+/*ALL PAGE STYLE*/
 
 #siteContainer
 {
@@ -19,14 +54,19 @@
 	width: 1400px;
 	height: auto;
 	text-decoration: none;
-	background: #d7d7d7;
+	background: #bbd08b;
 	font-family: Arial;
 }
 
 #mainNav {
 	height: 175px;
 	width: 1400px;
-	background: #898989;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,cedcad+100 */
+	background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #cedcad 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#cedcad 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#cedcad 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cedcad',GradientType=0 ); /* IE6-9 */
 	display: flex;
 }
 
@@ -47,7 +87,7 @@
 #mainNav ul li {
 	font-family: Arial;
 	font-size: 24px;
-	color: #000;
+	color: #485725;
 	margin-left: 15px;
 }
 
@@ -64,59 +104,19 @@
 	flex-direction: row;
 	padding: 5px;
 	border-radius: 10px;
-	color: #000;
+	color: #5d7032;
 }
 
 #mainNav ul li a:hover {
-	background-color: #999;
+ /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	box-shadow: 2px 1px 18px #a6b87b;
 	border-radius: 10px;
-	padding: 10px;
-}
-
-#heroContainer
-{
-	height: 500px;
-	background: #999;
-}
-
-#heroImg
-{
-	height: 400px;
-	background: #333;
-}
-
-#heroSlogan1
-{
-	font-size: 36px;
-	font-family: Arial;
-	color: #FFF;
-	position: relative;
-	top: 8px;
-	left: 20px;
-}
-
-#heroSlogan2
-{
-	font-size: 36px;
-	font-family: Arial;
-	color: #FFF;
-	position: relative;
-	margin-top: 0;
-	top: 320px;
-	left: 880px;
-}
-
-
-#heroText
-{
-	margin-left: 25px;
-	margin-right: 25px;
-	text-align: center;
-	padding-top: 50px;
-	font-family: Arial;
-	height: 100px;
-	background: #999;
-	font-size: 30px;
+	padding: 5px;
 }
 
 #memberships
@@ -200,35 +200,88 @@
 	width: 300px;
 }
 
-.title
-{
-	width: 1050px;
-	margin-left: 175px;
+#footerNav {
+	height: 175px;
+	background: #898989;
+	display: flex;
+}
+
+#footerNav ul{
+	width: 1400px;
+	display: flex;
+	height: 175px;
+	margin-top: 75px;
+	margin-left: 75px;
+}
+
+#footerNav ul li {
 	font-family: Arial;
-	font-size: 36px;
-}
-
-.title h2
-{
-	font-size: 36px;
-	font-weight: bold;
-	padding: 10px;
-}
-
-.subtitle
-{
-	width: 1050px;
-	margin-left: 175px;
-	font-family: Arial;
-}
-
-.subtitle h3
-{
-	text-align: center;
 	font-size: 24px;
-	font-weight: bold;
-	padding: 10px;
+	color: #000;
+	margin-left: 15px;
 }
+
+#footerNav ul li a {
+	text-decoration: none;
+	flex-direction: row;
+	padding: 20px;
+	border-radius: 10px;
+	color: #000;
+}
+
+#footerNav ul li a:hover {
+	background-color: #999;
+	border-radius: 10px;
+	padding: 20px;
+}
+
+#heroContainer
+{
+	height: 500px;
+	background: #999;
+}
+
+#heroImg
+{
+	height: 400px;
+	background: #333;
+}
+
+#heroSlogan1
+{
+	font-size: 36px;
+	font-family: Arial;
+	color: #FFF;
+	position: relative;
+	top: 8px;
+	left: 20px;
+}
+
+#heroSlogan2
+{
+	font-size: 36px;
+	font-family: Arial;
+	color: #FFF;
+	position: relative;
+	margin-top: 0;
+	top: 320px;
+	left: 880px;
+}
+
+
+#heroText
+{
+	margin-left: 25px;
+	margin-right: 25px;
+	text-align: center;
+	padding-top: 50px;
+	font-family: Arial;
+	height: 100px;
+	background: #999;
+	font-size: 30px;
+}
+
+/*INDEX PAGE*/
 
 .announcements
 {
@@ -310,7 +363,8 @@
 	margin-bottom: 20px;
 }
 
-.member {
+.member 
+{
 	flex-direction: column;
 	padding: 10px
 }
@@ -320,19 +374,14 @@
 	font-weight: bold;
 }
 
-#about1{
+/*ABOUT US PAGE*/
+
+#about1
+{
 	width: 1050px;
 	background: #d7d7d7;
 	display: flex;
 	margin: 0 auto;
-}
-
-#about1 h1{
-	font-size: 36px;
-	padding: 10px;
-	display: flex;
-
-
 }
 
 #aboutImageCon{
@@ -341,15 +390,12 @@
 	justify-content: space-around;
 }
 
-
-
-#imageA1{
+#imageA1
+{
 	height: 300px;
 	width: 505px;
 	background: #333;
 	margin-right: auto;
-
-
 }
 
 #imageA2{
@@ -430,39 +476,4 @@
 	line-height: 27px;
 }
 
-
-#footerNav {
-	height: 175px;
-	background: #898989;
-	display: flex;
-}
-
-#footerNav ul{
-	width: 1400px;
-	display: flex;
-	height: 175px;
-	margin-top: 75px;
-	margin-left: 75px;
-}
-
-#footerNav ul li {
-	font-family: Arial;
-	font-size: 24px;
-	color: #000;
-	margin-left: 15px;
-}
-
-#footerNav ul li a {
-	text-decoration: none;
-	flex-direction: row;
-	padding: 20px;
-	border-radius: 10px;
-	color: #000;
-}
-
-#footerNav ul li a:hover {
-	background-color: #999;
-	border-radius: 10px;
-	padding: 20px;
-}
 
