--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
 
 .title
 {
-	width: 1050px;
+	width: 975px;
 	font-family: Arial;
 	font-size: 36px;
 	margin-top: 5px; 
@@ -34,16 +34,23 @@
 .subtitle
 {
 	width: 1050px;
-	margin-left: 175px;
 	font-family: Arial;
 }
 
 .subtitle h3
 {
-	text-align: center;
 	font-size: 24px;
 	font-weight: bold;
 	padding: 10px;
+}
+
+.extraSpace
+{
+	width: 975px;
+	height: auto;
+	background-color: #bbd08b;
+	margin: 0 auto;
+	align-content: center;
 }
 
 /*ALL PAGE STYLE*/
@@ -100,7 +107,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
 	padding-top:5px;
 	border-radius: 10px;
-	width: 80px;
+	width: 85px;
 	height: 30px;
 }
 
@@ -210,7 +217,6 @@
 {
 	width: 225px;
 	height: 175px;
-	background: #333;
 }
 
 #fundraiserTitles
@@ -231,41 +237,71 @@
 #fundraiserText
 {
 	width: 850px;
+	margin: 0 auto;
 }
 
-#footerNav {
-	height: 175px;
-	background: #898989;
+#footer {
+	height: 50px;
+	width: 1400px;
+	margin: 0 auto;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,cedcad+100 */
+	background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #cedcad 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#cedcad 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#cedcad 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cedcad',GradientType=0 ); /* IE6-9 */
 	display: flex;
 }
 
 #footerNav ul{
 	width: 1400px;
 	display: flex;
-	height: 175px;
-	margin-top: 75px;
-	margin-left: 75px;
+	height: 50px;
+	margin-left: 50px;
 }
 
-#footerNav ul li {
+#footerNav ul li 
+{
 	font-family: Arial;
-	font-size: 24px;
+	font-size: 20px;
 	color: #000;
-	margin-left: 15px;
+	margin-top: 15px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
-#footerNav ul li a {
+#footerNav ul li a 
+{
 	text-decoration: none;
 	flex-direction: row;
-	padding: 20px;
+	padding: 5px;
 	border-radius: 10px;
 	color: #000;
 }
 
 #footerNav ul li a:hover {
-	background-color: #999;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	box-shadow: 2px 1px 18px #a6b87b;
 	border-radius: 10px;
-	padding: 20px;
+	padding: 5px;
+}
+
+.Fbutton{
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	padding: 5px;
+	width: 80px;
+	height: 20px;
 }
 
 /*INDEX PAGE*/
@@ -335,27 +371,43 @@
 	border: 1px #485725 dashed;
 }
 
-.announcements
+
+#announcements
 {
-	width: 1050px;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 975px;
+	height: auto;
+	color: #5d7032;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	border: 1px #485725 dashed;
+}
+
+.announcements
+{	
+	width: 975px;
 	padding: 10px;
-	margin-left: 175px;
+	margin-left: 30px;
 	font-family: Arial;
 	display: flex;
 }
 
 .announcement
 {	
-	width: 700px;
-	margin-left: 20px;
+	margin-left: 40px;
+	width: 500px;
 	font-size: 22px;
 	line-height: 40px;
-	text-indent: 20px;
 }
 
 .announcement h2
 {
-	width: 1050px;
 	font-size: 24px;
 	font-weight: bold;
 }
@@ -364,25 +416,40 @@
 {
 	width: 300px;
 	height: 300px;
-	background: #333;
 	margin-top: 10px;
+}
+
+#businesses
+{
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 975px;
+	height: auto;
+	color: #5d7032;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	border: 1px #485725 dashed;
 }
 
 .businesses
 {
-	width: 1050px;
-	height: 300px;
+	width: 975px;
+	height: auto;
 	display: flex;
-	margin-left: 175px;
-	padding: 10px;
+	margin-top: 20px;
 }
 
 .businessText
 {	
+	width: 600px;
+	margin-left: 30px;
 	text-indent: 20px;
 	flex-direction: row;
-	width: 700px;
-	margin-left: 15px;
 	font-size: 22px;
 	line-height: 40px;
 }
@@ -391,25 +458,56 @@
 {
 	width: 300px;
 	height: 175px;
-	background: #333;
 	margin-top: 10px;
+	margin-left: 10px;
+}
+
+#executives
+{
+	width: 975px;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	border: 1px #485725 dashed;
 }
 
 .executives
 {
-	width: 1050px;
+	width: 975px;
 	margin: 0 auto;
 	text-align: left;
+}
+
+#chairs
+{
+	width: 975px;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	border: 1px #485725 dashed;
 }
 
 .chairs
 {
-	width: 1050px;
+	width: 975px;
 	margin: 0 auto;
 	text-align: left;
 }
 
-.members {
+.members 
+{
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 20px;
@@ -418,11 +516,17 @@
 .member 
 {
 	flex-direction: column;
-	padding: 10px
+	padding: 10px;
+}
+
+.member p
+{
+	margin-left: 10px;
 }
 
 .member h2
 {
+	font-size: 24px;
 	font-weight: bold;
 }
 
