--- a/css/main.css
+++ b/css/main.css
@@ -773,9 +773,139 @@ input [ type=text ], select, textarea, #message
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
 	border-radius: 10px;
 	border: 1px #485725 dashed;
+	padding-bottom: 10px;
 }
 
 .eventBox
 {
+	width: 975px;
+	padding-top: 15px;
+	margin: 0 auto;
+}
 
+.eventImages
+{
+	width: 850px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
+
+.eventImg
+{
+	width: 225px;
+	height: 175px;
+	margin-top: 10px;
+}
+
+.eventText
+{
+	width: 850px;
+	font-size: 24px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.boxText
+{
+	text-align: left;
+	width: 225px;
+}
+
+.eventButtons
+{
+	display: flex;	
+	margin-top: 20px;
+}
+
+.eventButton
+{
+	margin: 0 auto;
+	flex-direction: row;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	padding: 5px;
+}
+
+.eventButton a
+{
+	text-decoration: none;
+	justify-content: space-evenly;
+	color: #5d7032;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
+	background: #b2c584; /* Old browsers */
+    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+}
+
+/*MORE*/
+
+#newsCon
+{
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 975px;
+	height: auto;
+	color: #5d7032;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	border: 1px #485725 dashed;
+}
+
+#newsletter
+{
+	width: 975px;
+	display: flex;
+	margin: 0 auto;
+}
+
+
+#news1TextCon
+{
+	display: flex;
+	flex-direction: column;
+	margin-left: 30px;
+	width: 400px;
+	margin-bottom: 20px;
+}
+
+#news1TextCon p
+{
+	font-size: 24px;
+	margin-top: 15px;
+	line-height: 30px;
+	text-indent: 10px;
+}
+
+#subtitle p
+{
+	text-indent: 0px;
+	width: 400px;
+	font-size: 30px;
+	font-family: Arial;
+}
+
+#newslettersCon
+{
+	width: 415px;
+	height: 775px;
+	background-color: #333;
+	margin-bottom: 20px;
+	margin-top: 40px;
+	margin-left: 50px;
 }
