--- a/css/main.css
+++ b/css/main.css
@@ -271,8 +271,8 @@
 {
 	font-family: Arial;
 	font-size: 20px;
-	margin-top: 15px;
 	color: #5d7032;
+	margin-top: 15px;
 	margin-left: 10px;
 	margin-right: 10px;
 }
@@ -283,7 +283,7 @@
 	flex-direction: row;
 	padding: 5px;
 	border-radius: 10px;
-	color: #5d7032;
+	color: #000;
 }
 
 #footerNav ul li a:hover {
@@ -533,8 +533,7 @@
 
 .member h2
 {
-	font-size: 24px;
-	font-weight: bold;
+	color-interpolation-filters: 
 }
 
 /*ABOUT US PAGE*/
@@ -780,7 +779,6 @@ input [ type=text ], select, textarea, #message
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
 	border-radius: 10px;
 	border: 1px #485725 dashed;
-	padding-bottom: 10px;
 }
 
 .eventBox
@@ -854,6 +852,8 @@ input [ type=text ], select, textarea, #message
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
 	border-radius: 10px;
 }
+
+/*MORE*/
 
 /*MORE*/
 
@@ -1073,4 +1073,94 @@ input [ type=text ], select, textarea, #message
 	line-height: 35px;
 }
 
+/* Projects Page */
 
+#subtitleP h3
+{
+	font-size: 24px;
+	font-weight: bold;
+	padding: 10px;
+	text-align: center;
+}
+
+#projectsTop 
+{
+	margin: 0 auto;
+	width: 850px;
+	text-align: center;
+	font-size: 24px;
+
+
+}
+
+#projectsCon {
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 975px;
+	height: auto;
+	color: #5d7032;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	border: 1px #485725 dashed;
+}
+
+#projectsImageCon {
+	margin-left: 135px;
+}
+
+
+#projectsBottom{
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 975px;
+	height: auto;
+	color: #5d7032;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	border: 1px #485725 dashed;
+}
+
+.projBottom
+{
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-around;
+	margin: 20px;
+	
+
+}
+
+#projBottom2 {
+	text-indent: 10px;
+	font-size: 24px;
+	line-height: 25px;
+	width: 450px;
+}
+
+#projBottom2 h4 {
+	font-size: 30px;
+	font-weight: bold;
+}
+
+#projBottom4{
+	text-indent: 10px;
+	font-size: 24px;
+	line-height: 25px;
+	width: 440px;
+
+}
+
+#projBottom4 h4 {
+	font-size: 30px;
+	font-weight: bold;
+}
