--- a/css/main.css
+++ b/css/main.css
@@ -1372,3 +1372,45 @@ input [ type=text ], select, textarea, #message
 	line-height: 27px;
 }
 
+
+
+#dataCon
+{
+	width: 975px;
+	height: 575px;
+	font-size: 30px;
+	padding-bottom: 10px;
+	margin: 0 auto;
+	color: #5d7032;
+}
+
+#dataBlurb
+{
+	height: 550px;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e9ffd8+100 */
+    background: #ffffff; /* Old browsers */
+    background: -moz-linear-gradient(top, #ffffff 0%, #e9ffd8 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ffffff 0%,#e9ffd8 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ffffff 0%,#e9ffd8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9ffd8',GradientType=0 ); /* IE6-9 */
+	border-radius: 10px;
+	border: 1px #485725 dashed;
+}
+
+#dataImgs {
+	width: 960px;
+	display: flex;
+	flex-direction row;
+	justify-content: space-evenly;
+	padding-top: 15px;
+	margin-top: 90px;
+}
+
+.dataImg
+{
+	width: 275px;
+	height: 206px;
+
+}
